; ModuleID = '/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_display.c_UI_DisplayOptionsMenu_Event.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_display.c_UI_DisplayOptionsMenu_Event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_6__, %struct.TYPE_5__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { float }
%struct.TYPE_7__ = type { i32 }

@QM_ACTIVATED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"r_gamma\00", align 1
@displayOptionsInfo = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"cg_viewsize\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @UI_DisplayOptionsMenu_Event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UI_DisplayOptionsMenu_Event(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @QM_ACTIVATED, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %35

9:                                                ; preds = %2
  %10 = load i8*, i8** %3, align 8
  %11 = bitcast i8* %10 to %struct.TYPE_7__*
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  switch i32 %13, label %35 [
    i32 131, label %14
    i32 132, label %17
    i32 128, label %18
    i32 130, label %21
    i32 133, label %24
    i32 129, label %29
    i32 134, label %33
  ]

14:                                               ; preds = %9
  %15 = call i32 (...) @UI_PopMenu()
  %16 = call i32 (...) @UI_GraphicsOptionsMenu()
  br label %35

17:                                               ; preds = %9
  br label %35

18:                                               ; preds = %9
  %19 = call i32 (...) @UI_PopMenu()
  %20 = call i32 (...) @UI_SoundOptionsMenu()
  br label %35

21:                                               ; preds = %9
  %22 = call i32 (...) @UI_PopMenu()
  %23 = call i32 (...) @UI_NetworkOptionsMenu()
  br label %35

24:                                               ; preds = %9
  %25 = load float, float* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @displayOptionsInfo, i32 0, i32 1, i32 0), align 4
  %26 = fdiv float %25, 1.000000e+01
  %27 = fptosi float %26 to i32
  %28 = call i32 @trap_Cvar_SetValue(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %27)
  br label %35

29:                                               ; preds = %9
  %30 = load i32, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @displayOptionsInfo, i32 0, i32 0, i32 0), align 4
  %31 = mul nsw i32 %30, 10
  %32 = call i32 @trap_Cvar_SetValue(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 %31)
  br label %35

33:                                               ; preds = %9
  %34 = call i32 (...) @UI_PopMenu()
  br label %35

35:                                               ; preds = %8, %9, %33, %29, %24, %21, %18, %17, %14
  ret void
}

declare dso_local i32 @UI_PopMenu(...) #1

declare dso_local i32 @UI_GraphicsOptionsMenu(...) #1

declare dso_local i32 @UI_SoundOptionsMenu(...) #1

declare dso_local i32 @UI_NetworkOptionsMenu(...) #1

declare dso_local i32 @trap_Cvar_SetValue(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
